--- a/WellBeing.html
+++ b/WellBeing.html
@@ -85,11 +85,11 @@
 
 <!-- result section starts   -->
 
-<section class="result" id="result" data-aos="flip-down">
+<section class="result" id="result">
 
     <h1 class="heading"> <span>Fill </span> in <span>your</span> data </h1>    
 
-    <div class="row" >
+    <div class="row" data-aos="flip-down">
 
         <div class="image">
             <img src="image/research.svg" alt="">
